# stopping_trajectory

./: CMakeLists.txt  README.md  package.xml
config/: stopping_trajectory.yaml
include/stopping_trajectory/: StoppingTrajectory.h
launch/: stopping_trajectory.launch
src/: CommandStop.cpp  ComputeTrajectory.cpp  EscapePoints.cpp  Initialization.cpp  SamplePoints.cpp  StoppingTrajectory.cpp  Visualization.cpp  stopping_trajectory.cpp
